added videos and favorites functionality
