# src/users/dto/put.user.dto.ts
@@ -4,4 +4,5 @@ export interface PutUserDto {
     firstName: string;
     lastName: string;
     permissionFlags: number;
+    favorites: [];
 }
